# xla-recompile-lens

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: recompile-analyst.md  tpu-honesty-reviewer.md
.claude/skills/colab-run/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: __init__.py  device.py  llm_prefill_serving.py  workload.py
docs/: REPORT.md  WALKTHROUGH.md  pytorch-xla-issue-draft.md  report.html
examples/: plugin_demo.py  see_it_work.py
fusion_bench/: README.md  __init__.py  classical.py  compare.py  demo.py  graph.py  planner.py
notebooks/: colab_tpu_demo.ipynb  llm_serving_tpu.ipynb
results/: measured_tpu.json
scripts/: render_report.py
src/xla_recompile_lens/: __init__.py  attribute.py  autobucket.py  bucket_advisor.py  capture.py  cli.py  fixes.py  plugin.py  report.py  shapes.py  types.py
tests/: test_attribute.py  test_bucket_advisor.py  test_fusion_bench.py  test_padding_correctness.py  test_plugin.py  test_shapes_and_fixes.py
